--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ffa726</color>
+    <color name="colorPrimaryDark">#c77800</color>
+    <color name="colorPrimaryLight">#ffd95b</color>
+    <color name="colorPrimaryText">#000000</color>
+
+    <color name="colorSecondary">#691b99</color>
+    <color name="colorSecondaryDark">#37006a</color>
+    <color name="colorSecondaryLight">#9b4dcb</color>
+    <color name="colorSecondaryText">#ffffff</color>
     <color name="colorFieldIcon">#616161</color>
 </resources>
