--- a/app/src/main/res/layout/batch_form_fragment.xml
+++ b/app/src/main/res/layout/batch_form_fragment.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout  xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="batch"
             type="com.fullmeadalchemist.mustwatch.vo.Batch" />
     </data>
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -47,7 +45,7 @@
                     app:srcCompat="@drawable/ic_access_time_black_24dp" />
 
                 <TextView
-                    android:id="@+id/textView_time"
+                    android:id="@+id/createDate"
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
                     android:layout_marginLeft="24dp"
@@ -56,6 +54,7 @@
                     android:gravity="start|center"
                     android:inputType="text"
                     android:maxLines="1"
+                    android:text="@{batch.createDate}"
                     android:textAlignment="textStart"
                     tools:text="Mar 31, 2017" />
 
@@ -188,12 +187,13 @@
                 android:layout_height="wrap_content">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editText_sg"
+                    android:id="@+id/targetABV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Specific Gravity (example: 1.110)"
+                    android:hint="Target ABV%"
                     android:inputType="numberDecimal"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:text="@{batch.targetABV}" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -202,12 +202,13 @@
                 android:layout_height="wrap_content">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editText_ph_level"
+                    android:id="@+id/targetSgStarting"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="pH level (example: 3.7)"
+                    android:hint="Target starting Specific Gravity (example: 1.115)"
                     android:inputType="numberDecimal"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:text="@{batch.targetSgStarting}" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -216,14 +217,46 @@
                 android:layout_height="wrap_content">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editText_temperature"
+                    android:id="@+id/targetSgFinal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="temperature"
+                    android:hint="Target final Specific Gravity (example: 1.05)"
                     android:inputType="numberDecimal"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:text="@{batch.targetSgFinal}" />
 
             </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/startingPh"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Starting pH level (example: 3.7)"
+                    android:inputType="numberDecimal"
+                    android:maxLines="1"
+                    android:text="@{batch.startingPh}" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/startingTemp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="starting temperature"
+                    android:inputType="numberDecimal"
+                    android:maxLines="1"
+                    android:text="@{batch.startingTemp}" />
+
+            </android.support.design.widget.TextInputLayout>
+
 
 
             <android.support.constraint.ConstraintLayout
@@ -250,14 +283,15 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:text="Notes"
-                    app:layout_constraintLeft_toLeftOf="@+id/editText5"
-                    app:layout_constraintRight_toRightOf="@+id/editText5"
+                    app:layout_constraintLeft_toLeftOf="@+id/notes"
+                    app:layout_constraintRight_toRightOf="@+id/notes"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="Notes" />
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/editText5"
-                    android:layout_width="0dp"
+                <EditText
+                    android:id="@+id/notes"
+                    android:inputType="textMultiLine"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginLeft="8dp"
@@ -265,16 +299,17 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:ems="10"
-                    android:inputType="textMultiLine"
                     android:lines="4"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_notes_label" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView_notes_label"
+                    android:text="@{batch.notes}"
+                    tools:text="Notes about the batch go here. Notes about the batch go here. Notes about the batch go here."/>
 
             </android.support.constraint.ConstraintLayout>
 
             <Button
-                android:id="@+id/button_save"
+                android:id="@+id/button_submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -284,6 +319,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
                 android:text="@string/save_batch" />
+
 
         </LinearLayout>
     </ScrollView>
