--- a/app/src/main/res/layout/batch_form_fragment.xml
+++ b/app/src/main/res/layout/batch_form_fragment.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
         <variable
             name="batch"
             type="com.fullmeadalchemist.mustwatch.vo.Batch" />
     </data>
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="16dp">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
@@ -28,11 +29,25 @@
                 android:text="@string/create_batch_title"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Batch name"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:text="@{batch.name}" />
+
+            </android.support.design.widget.TextInputLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -41,25 +56,24 @@
                     android:layout_height="48dp"
                     android:adjustViewBounds="true"
                     android:gravity="center"
+                    android:contentDescription="date created"
                     android:tint="@color/colorFieldIcon"
                     app:srcCompat="@drawable/ic_access_time_black_24dp" />
 
                 <TextView
-                    android:id="@+id/createDate"
+                    android:id="@+id/createDateDate"
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
-                    android:layout_marginLeft="24dp"
                     android:layout_marginStart="24dp"
                     android:ems="10"
                     android:gravity="start|center"
-                    android:inputType="text"
                     android:maxLines="1"
                     android:text="@{batch.createDate}"
                     android:textAlignment="textStart"
                     tools:text="Mar 31, 2017" />
 
                 <TextView
-                    android:id="@+id/textView_date"
+                    android:id="@+id/createDateTime"
                     android:layout_width="wrap_content"
                     android:layout_height="48dp"
                     android:ems="10"
@@ -182,6 +196,37 @@
 
             </android.support.constraint.ConstraintLayout>
 
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/status"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Status"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:text="@{batch.status}" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/outputVolume"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Output Volume"
+                    android:inputType="numberDecimal"
+                    android:maxLines="1"
+                    android:text="@{batch.outputVolume}" />
+
+            </android.support.design.widget.TextInputLayout>
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -258,7 +303,6 @@
             </android.support.design.widget.TextInputLayout>
 
 
-
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout_notes_group"
                 android:layout_width="match_parent"
@@ -290,7 +334,6 @@
 
                 <EditText
                     android:id="@+id/notes"
-                    android:inputType="textMultiLine"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
@@ -299,12 +342,13 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:ems="10"
+                    android:inputType="textMultiLine"
                     android:lines="4"
+                    android:text="@{batch.notes}"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView_notes_label"
-                    android:text="@{batch.notes}"
-                    tools:text="Notes about the batch go here. Notes about the batch go here. Notes about the batch go here."/>
+                    tools:text="Notes about the batch go here. Notes about the batch go here. Notes about the batch go here." />
 
             </android.support.constraint.ConstraintLayout>
 
