--- a/app/src/main/res/layout/batch_list.xml
+++ b/app/src/main/res/layout/batch_list.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <import type="java.util.List"/>
+    </data>
 <android.support.design.widget.CoordinatorLayout
     android:id="@+id/main_content"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/batch_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -32,3 +36,4 @@
         android:layout_alignParentLeft="false" />
 
 </android.support.design.widget.CoordinatorLayout>
+</layout>
