Fixed Batch list to show batch details in card views.

--- a/app/src/main/res/layout/batch_card_view.xml
+++ b/app/src/main/res/layout/batch_card_view.xml
@@ -28,19 +28,26 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    tools:text="Joe's Quick Grape Mead" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/name"
+                        android:id="@+id/batch_id"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_toRightOf="@+id/batch_photo"
                         android:layout_weight="1"
-                        android:textSize="24sp"
                         tools:text="Batch 9" />
 
                     <TextView
