Fixed some lint issues, added Sugar definition and backing json data

--- a/app/src/main/res/layout/batch_list.xml
+++ b/app/src/main/res/layout/batch_list.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <import type="java.util.List"/>
     </data>
@@ -31,9 +30,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="false"
-        android:layout_alignParentRight="false"
-        android:layout_alignWithParentIfMissing="false"
-        android:layout_alignParentLeft="false" />
+        android:layout_alignWithParentIfMissing="false" />
 
 </android.support.design.widget.CoordinatorLayout>
 </layout>
