--- a/app/src/main/res/layout/log_list.xml
+++ b/app/src/main/res/layout/log_list.xml
@@ -27,8 +27,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="false"
-        android:layout_alignParentRight="false"
-        android:layout_alignWithParentIfMissing="false"
-        android:layout_alignParentLeft="false" />
+        android:layout_alignWithParentIfMissing="false"/>
 
 </android.support.design.widget.CoordinatorLayout>
