--- a/app/src/main/res/layout/log_entry_card_view.xml
+++ b/app/src/main/res/layout/log_entry_card_view.xml
@@ -44,7 +44,7 @@
 
                 <TextView
                     android:id="@+id/entryDate"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="top|start"
@@ -66,7 +66,7 @@
 
                     <TextView
                         android:id="@+id/sgLabel"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Specific Gravity"
@@ -88,7 +88,7 @@
 
                     <TextView
                         android:id="@+id/acidityLabel"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Acidity"
@@ -107,7 +107,7 @@
                 <TextView
                     android:id="@+id/note"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:textAlignment="viewStart"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
