--- a/app/src/main/res/layout/batch_form_fragment.xml
+++ b/app/src/main/res/layout/batch_form_fragment.xml
@@ -216,13 +216,12 @@
                 android:layout_height="wrap_content">
 
                 <android.support.design.widget.TextInputEditText
-                    android:id="@+id/outputVolume"
+                    android:id="@+id/outputVolumeAmount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Output Volume"
                     android:inputType="numberDecimal"
-                    android:maxLines="1"
-                    android:text="@{batch.outputVolume}" />
+                    android:maxLines="1"/>
 
             </android.support.design.widget.TextInputLayout>
 
