--- a/app/src/main/res/layout/user_login_form.xml
+++ b/app/src/main/res/layout/user_login_form.xml
@@ -18,7 +18,7 @@
             android:layout_height="72dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
-            app:srcCompat="@drawable/logo"/>
+            app:srcCompat="@drawable/ic_fma_fg"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
