--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#ffa726</color>
-    <color name="colorPrimaryDark">#c77800</color>
-    <color name="colorPrimaryLight">#ffd95b</color>
+    <color name="colorPrimaryDark">#bf8400</color>
+    <color name="colorPrimaryLight">#ffb000</color>
     <color name="colorPrimaryText">#000000</color>
 
     <color name="colorSecondary">#691b99</color>
