Added crashlytics support, refactored Sugar model into Ingredient
fixed/made more complete the unit test for Ingredients

--- a/app/src/main/res/layout/batch_log_form_fragment.xml
+++ b/app/src/main/res/layout/batch_log_form_fragment.xml
@@ -108,13 +108,13 @@
                 android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:contentDescription="add sugar"
-                android:text="add sugar"
+                android:contentDescription="add ingredient"
+                android:text="add ingredient"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView_sugars_added"
-                tools:text="add sugar" />
+                tools:text="add ingredient" />
 
 
         </android.support.constraint.ConstraintLayout>
